samples/_failures_safe/1761044483_7c8aff_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1ffe9557.c: In function ‘main’:
./samples/SAFE/__tmp_1ffe9557.c:151:9: error: expected declaration or statement at end of input
  151 |         }
      |         ^
./samples/SAFE/__tmp_1ffe9557.c:151:9: error: expected declaration or statement at end of input
